<h5>2.0 Alpha 1         [NOT RELEASED, WORK IN PROGRESS]</h5>
<hr>
- moved functions to Utilities class (mamba)
- started with conversion to XoopsRequest (mamba)
- made check for upload folders easier (mamba)
- some cosmetic changes related to PSR-2 (mamba)
- experimenting with PSR-4 Autoloading (mamba)
- shorten class names (mamba)



<h5>1.63 Beta 3         [NOT RELEASED]</h5>
<hr>
- some cosmetic changes related to PSR-2 (mamba)
- changed: size of logo in category (mamba)
- changed: button for files for approval only visible if there are actual files to approve (mamba)
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
- replaced all hard-coded directory names with dynamic variables (mamba)
- recoded xoops_version.php variables into one array (mamba)

TODO:
- add test data
- do more testing
- update "update.php" file
- convert to use XoopsRequest


<h5>1.63 Beta 2             [2013/08/24]</h5>
<hr>
- fix: Typos (cesagonchu)
- Correcting English language files (cesagonchu)
- removing obsolete bookmarks : Google Reader, Simpy, Spurl (cesagonchu)
- Standardization of syntax in the language folder (cesagonchu)


<h5>1.63 Beta 1           [2012/12/23]</h5>
<hr>
- fix: no need anymore for trans_size in showing file size in search.php (hipoonios/mamba)
- fix: clearing "download" Smarty variable before appending values to it in search.php (hipoonios/mamba)


<h5>1.62 Final          [2012/06/30]</h5>
<hr>

- replaced Google Buzz with Google Plus
- Showing Latest files is optional (DCrussader/Mamba)
- other minor improvements


<h5>1.61                [2011/08/14]</h5>
<hr>

List of bugs:

 - bug in field.php (class moduleadmin not found) (Mage).

List of improvements:

 - Using Frameworks "ModuleClasses" 1.1 (Mage).


<h5>1.6                 [2011/06/19]</h5>
<hr>

List of bugs:

 - It was impossible to choose categories to show in the block admin (nothing is shown) (Mage).