@@ -14,7 +14,7 @@
  * @author      Gregory Mage (Aka Mage)
  */
 //require dirname(__DIR__) . '/include/setup.php';
-require_once __DIR__ . '/../autoloader.php';
+//require_once __DIR__ . '/../autoloader.php';
 require_once __DIR__ . '/admin_header.php';
 
 //require_once dirname(__DIR__) . '/include/functions.folders.php';
