@@ -16,7 +16,7 @@
  * @since
  * @author       XOOPS Development Team
  */
-require_once __DIR__ . '/../autoloader.php';
+//require_once __DIR__ . '/../autoloader.php';
 
 use Xoopsmodules\tdmdownloads;
 
